--- a/WeatherApp/Screens/Cities/View/AddCityViewController.xib
+++ b/WeatherApp/Screens/Cities/View/AddCityViewController.xib
@@ -27,13 +27,13 @@
                     <rect key="frame" x="0.0" y="44" width="414" height="56"/>
                     <subviews>
                         <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="249" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="oSk-ta-45Q">
-                            <rect key="frame" x="0.0" y="0.0" width="358" height="56"/>
+                            <rect key="frame" x="0.0" y="0.0" width="356" height="56"/>
                             <fontDescription key="fontDescription" type="system" pointSize="14"/>
                             <textInputTraits key="textInputTraits"/>
                         </textField>
                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="gGS-E1-Y6e">
-                            <rect key="frame" x="368" y="0.0" width="46" height="56"/>
-                            <state key="normal" title="Button"/>
+                            <rect key="frame" x="366" y="0.0" width="48" height="56"/>
+                            <state key="normal" title="Search"/>
                             <connections>
                                 <action selector="searchButton:" destination="-1" eventType="touchUpInside" id="hNG-3t-EuK"/>
                             </connections>
