--- a/WeatherApp/Screens/Map/View/MapViewController.xib
+++ b/WeatherApp/Screens/Map/View/MapViewController.xib
@@ -8,7 +8,7 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
-        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="AddCityViewController" customModule="WeatherApp" customModuleProvider="target">
+        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="MapViewController" customModule="WeatherApp" customModuleProvider="target">
             <connections>
                 <outlet property="mapView" destination="b0f-N1-bO8" id="hKJ-oT-7Ky"/>
                 <outlet property="searchTextField" destination="oSk-ta-45Q" id="Nln-TC-fbX"/>
