--- a/WeatherApp/Screens/Home/View/HomeViewController.xib
+++ b/WeatherApp/Screens/Home/View/HomeViewController.xib
@@ -10,6 +10,7 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="HomeViewController" customModule="WeatherApp" customModuleProvider="target">
             <connections>
+                <outlet property="citySearchBar" destination="m7p-Ub-B8g" id="pZP-VJ-8uV"/>
                 <outlet property="tableView" destination="wir-bE-Vv2" id="RLv-4D-H9J"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="rfb-y2-iDD"/>
             </connections>
@@ -23,7 +24,7 @@
                     <rect key="frame" x="0.0" y="44" width="414" height="852"/>
                     <subviews>
                         <navigationBar contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="HWo-Ox-nHe">
-                            <rect key="frame" x="0.0" y="0.0" width="414" height="44"/>
+                            <rect key="frame" x="0.0" y="0.0" width="414" height="100"/>
                             <items>
                                 <navigationItem title="Cities" id="Tlk-eu-Gcg">
                                     <barButtonItem key="rightBarButtonItem" title="Add" id="Um3-4E-1vR">
@@ -35,8 +36,13 @@
                             </items>
                         </navigationBar>
                         <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="wir-bE-Vv2">
-                            <rect key="frame" x="0.0" y="44" width="414" height="808"/>
+                            <rect key="frame" x="0.0" y="100" width="414" height="752"/>
                             <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                            <searchBar key="tableHeaderView" contentMode="redraw" id="m7p-Ub-B8g">
+                                <rect key="frame" x="0.0" y="0.0" width="414" height="56"/>
+                                <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </searchBar>
                         </tableView>
                     </subviews>
                     <constraints>
